update article model
